setSeenBulk api
